--- a/public/home.html
+++ b/public/home.html
@@ -193,7 +193,7 @@
 
     <footer class="bg-dark text-white py-3">
         <div class="container text-center">
-            <p>&copy; 2025 Portal de Notícias</p>
+            <p>&copy; 2025 Spotlight</p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
